<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.">
    <LinearLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/background"
        android:orientation="horizontal">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchview"
            app:iconifiedByDefault="false"
            android:background="@drawable/search_background"
            app:queryHint="Buscar en Mercado Libre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp">
        </androidx.appcompat.widget.SearchView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/errorbusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/error_sin_result"
            android:text="@string/error_sin_result" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_sin_result_palabra"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/notnetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/error_network"
            android:text="@string/error_network"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/reintento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onViewClickedReload"
            android:textColor="@color/azul"
            android:text="@string/error_network_reintent"
            android:layout_marginLeft="90dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_apoddetail_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


</RelativeLayout>