<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#86222222"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuOptions">
        <LinearLayout
            android:background="@color/white"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:elevation="10dp"
           >

                <RelativeLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_height"
                    android:background="@drawable/background"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >
                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            android:src="@drawable/mercadolibre"/>

                        <TextView
                            android:layout_below="@id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">
                        <TextView
                            android:id="@+id/categorias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textColor="@color/black"
                            android:text="@string/categoria"
                            />
                        <TextView
                            android:id="@+id/paises"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textColor="@color/black"
                            android:text="@string/paises"
                            />
                </LinearLayout>
        </LinearLayout>

</RelativeLayout>